<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_backgroud_1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome"
            android:textColor="#00FF00"
            android:textSize="20sp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/category_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/challenge_description"
            android:textColor="#00FF00" />

        <EditText
            android:id="@+id/challenge_description_enter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#AAFFFFFF"
            android:autoText="true"
            android:maxLines="10"
            android:lines="8"
            android:hint="@string/hint_challenge_description"
            android:textColor="#00FF00" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/choose_challenge_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/choose_challenge_time"
            android:textColor="#00FF00" />

        <Spinner
            android:id="@+id/challege_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/choose_snooze_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/choose_snooze_time"
            android:textColor="#00FF00" />

        <Spinner
            android:id="@+id/snooze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/bringiton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/bringiton" />

</LinearLayout>