<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/app_backgroud_1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/welcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="@string/welcome"
            android:textColor="#00FF00" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="0.35"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/main_description"
            android:textColor="#00FF00"
            android:textStyle="italic" />

    </LinearLayout>

    <Button
        android:id="@+id/getstarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/getstarted" />

</LinearLayout>